<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/optionSettings"
        android:enabled="true"
        android:visible="true"
        android:titleCondensed="About"
        android:alphabeticShortcut="t"
        android:menuCategory="system"
        android:title="@string/optionMenuSettings"
        yourapp:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings" />

    <item
        android:id="@+id/optionWorkOffline"
        android:enabled="true"
        android:visible="true"
        android:titleCondensed="Work offline"
        android:alphabeticShortcut="d"
        android:menuCategory="system"
        android:title="@string/optionMenuWorkOffline"
        yourapp:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_network_wifi" />

    <item
        android:id="@+id/optionSendQueued"
        android:enabled="true"
        android:visible="true"
        android:titleCondensed="Send"
        android:alphabeticShortcut="s"
        android:menuCategory="system"
        android:title="@string/optionMenuSendQueued"
        yourapp:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_send_now" />

    <item
        android:id="@+id/optionShowQueued"
        android:enabled="true"
        android:visible="true"
        android:titleCondensed="Show queued"
        android:alphabeticShortcut="q"
        android:menuCategory="system"
        android:title="@string/optionMenuShowQueued"
        yourapp:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_show_queued" />

    <item
        android:id="@+id/optionAbout"
        android:enabled="true"
        android:visible="true"
        android:titleCondensed="About"
        android:alphabeticShortcut="a"
        android:menuCategory="system"
        android:title="@string/optionMenuAbout"
        yourapp:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_about" />

    <item
        android:id="@+id/optionExit"
        android:enabled="true"
        android:visible="true"
        android:titleCondensed="Exit"
        android:alphabeticShortcut="e"
        android:menuCategory="system"
        android:title="@string/optionMenuExit"
        android:icon="@drawable/ic_action_cancel" />

</menu>
